@@ -2,13 +2,13 @@ name: Commerce Cart Blocks
 type: module
 description: 'Provides new types of Cart blocks for Drupal Commerce.'
 # version: 8.x-1.x
-# core: 8.x
+core: 8.x
+core_version_requirement: ^8 || ^9
 package: Commerce
 dependencies:
   - commerce:commerce_cart
 
-# Information added by Drupal.org packaging script on 2019-02-21
-version: '8.x-1.0-beta1'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2020-06-05
+version: '8.x-1.0-beta2'
 project: 'commerce_cart_blocks'
-datestamp: 1550769191
+datestamp: 1591330680
