@@ -1,3 +1,10 @@
+Commerce Cart Blocks 8.x-1.0-beta2, 2020-06-05
+----------------------------------------------
+by bmcclure: AJAX add to cart fixes
+by bmcclure: Add page refresh option when closing dialog
+#3053791 by adrianavaz: Add to cart confirmation message does not appear until page refresh
+by bmcclure: Indicate Drupal 9 compatibility
+
 Commerce Cart Blocks 8.x-1.0-beta1, 2019-02-21
 ----------------------------------------------
 #3004939 by AndyD328, stevepurkiss, bmcclure: Site breaks when there is no cart
